Moved tests to app, not lib